add Enter wallet button

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -616,6 +616,7 @@
   "Buy": "Kaufen",
   "Node Sale": "Verkauf von Knoten",
   "Purchase DGC": "DGC kaufen",
+  "Enter wallet": "Wallet öffnen",
   "Transactions": "Transaktionen",
   "Authed KYC": "Autorisiertes KYC",
   "Complete KYC": "KYC abschließen",
