--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -616,6 +616,7 @@
   "Buy": "",
   "Node Sale": "",
   "Purchase DGC": "",
+  "Enter wallet": "",
   "Transactions": "",
   "Authed KYC": "",
   "Complete KYC": "",
