--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -616,6 +616,7 @@
   "Buy": "Comprar",
   "Node Sale": "Venta de Nodos",
   "Purchase DGC": "Comprar DGC",
+  "Enter wallet": "Abrir monedero",
   "Transactions": "Transacciones",
   "Authed KYC": "KYC Autorizado",
   "Complete KYC": "Completar KYC",
