--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -615,6 +615,7 @@
   "Buy": "Acheter",
   "Node Sale": "Vente de Nœuds",
   "Purchase DGC": "Acheter DGC",
+  "Enter wallet": "Ouvrir portefeuille",
   "Transactions": "Transactions",
   "Authed KYC": "KYC autorisé",
   "Complete KYC": "Terminer le KYC",
