--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -616,6 +616,7 @@
   "Buy": "Beli",
   "Node Sale": "Penjualan Node",
   "Purchase DGC": "Beli DGC",
+  "Enter wallet": "Buka dompet",
   "Transactions": "Transaksi",
   "Authed KYC": "KYC yang Diotorisasi",
   "Complete KYC": "Selesai KYC",
