--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -618,6 +618,7 @@
   "Buy": "購入",
   "Node Sale": "ノード販売",
   "Purchase DGC": "DGCを購入",
+  "Enter wallet": "ウォレットを開く",
   "Transactions": "取引履歴",
   "Authed KYC": "認証済み KYC",
   "Complete KYC": "KYC を完了する",
