--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -616,6 +616,7 @@
   "Buy": "구매",
   "Node Sale": "노드 판매",
   "Purchase DGC": "DGC 구매",
+  "Enter wallet": "지갑 열기",
   "Transactions": "거래",
   "Authed KYC": "인증된 KYC",
   "Complete KYC": "완료된 KYC",
