--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -616,6 +616,7 @@
   "Buy": "Comprar",
   "Node Sale": "Venda de Nó",
   "Purchase DGC": "Comprar DGC",
+  "Enter wallet": "Abrir carteira",
   "Transactions": "Transações",
   "Authed KYC": "KYC autorizado",
   "Complete KYC": "Completar o KYC",
