--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -615,6 +615,7 @@
   "Buy": "Купить",
   "Node Sale": "Продажа узла",
   "Purchase DGC": "Купить DGC",
+  "Enter wallet": "Открыть кошелёк",
   "Transactions": "Транзакции",
   "Authed KYC": "Авторизованный KYC",
   "Complete KYC": "Завершить KYC",
