--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -615,6 +615,7 @@
   "Buy": "ซื้อ",
   "Node Sale": "การขายโหนด",
   "Purchase DGC": "ซื้อ DGC",
+  "Enter wallet": "เปิดกระเป๋าเงิน",
   "Transactions": "ธุรกรรม",
   "Authed KYC": "KYC ที่ได้รับการยืนยัน",
   "Complete KYC": "KYC เสร็จสมบูรณ์",
