--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -616,6 +616,7 @@
   "Buy": "Satın Al",
   "Node Sale": "Düğüm Satışı",
   "Purchase DGC": "DGC Satın Al",
+  "Enter wallet": "Cüzdanı aç",
   "Transactions": "İşlemler",
   "Authed KYC": "Kimlik Doğrulama Onaylı",
   "Complete KYC": "Kimlik Doğrulamasını Tamamla",
