--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -616,6 +616,7 @@
   "Buy": "Mua",
   "Node Sale": "Bán Node",
   "Purchase DGC": "Mua DGC",
+  "Enter wallet": "Mở ví",
   "Transactions": "Giao dịch",
   "Authed KYC": "KYC đã được xác thực",
   "Complete KYC": "Hoàn thành KYC",
