--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -78,6 +78,7 @@
   "Buy": "购买",
   "Node Sale": "节点销售",
   "Purchase DGC": "购买DGC",
+  "Enter wallet": "进入钱包",
   "Buy Now": "立即购买",
   "Bypass SSL verification for Websites": "绕过网站的 SSL 验证",
   "Cancel": "取消",
