update select models tip

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -626,7 +626,7 @@
   "Create Wallet": "Wallet erstellen",
   "Open Wallet": "Wallet öffnen",
   "Set as default": "Als Standard setzen",
-  "Click to select more models": "Klicken Sie, um mehr Modelle auszuwählen",
+  "Click to switch models": "Klicken Sie Modellwechsel",
   "Unlimited DGC Reward Task": "Aufgabe zur unbegrenzten DGC-Belohnung",
   "Rewards History": "Belohnungsgeschichte",
   "Rewards Details": "Belohnungsdetails",
