--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -626,7 +626,7 @@
   "Create Wallet": "",
   "Open Wallet": "",
   "Set as default": "",
-  "Click to select more models": "",
+  "Click to switch models": "",
   "Unlimited DGC Reward Task": "",
   "Rewards History": "",
   "Rewards Details": "",
