--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -626,7 +626,7 @@
   "Create Wallet": "Crear billetera",
   "Open Wallet": "Abrir billetera",
   "Set as default": "Establecer como predeterminado",
-  "Click to select more models": "Haga clic para seleccionar más modelos",
+  "Click to switch models": "Haga clic para Cambiar modelos",
   "Unlimited DGC Reward Task": "Tarea de recompensa DGC ilimitada",
   "Rewards History": "Historia de recompensas",
   "Rewards Details": "Detalles de recompensas",
