--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -625,7 +625,7 @@
   "Create Wallet": "Créer le portefeuille",
   "Open Wallet": "Ouvrir le portefeuille",
   "Set as default": "Définir par défaut",
-  "Click to select more models": "Cliquez pour sélectionner plus de modèles",
+  "Click to switch models": "Cliquez pour Changer de modèles",
   "Unlimited DGC Reward Task": "Tâche de récompense DGC illimité",
   "Rewards History": "Histoire des récompenses",
   "Rewards Details": "Détails des récompenses",
