--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -626,7 +626,7 @@
   "Create Wallet": "Buat Dompet",
   "Open Wallet": "Buka Dompet",
   "Set as default": "Atur sebagai Default",
-  "Click to select more models": "Klik untuk memilih lebih banyak model",
+  "Click to switch models": "Klik untuk mengganti model",
   "Unlimited DGC Reward Task": "Tugas Hadiah DGC Tanpa Batas",
   "Rewards History": "Sejarah Hadiah",
   "Rewards Details": "Detail Hadiah",
