--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -626,7 +626,7 @@
   "Create Wallet": "지갑 생성",
   "Open Wallet": "지갑 열기",
   "Set as default": "기본으로 설정",
-  "Click to select more models": "더 많은 모델을 선택하기 위해 클릭하세요",
+  "Click to switch models": "모델 전환하기",
   "Unlimited DGC Reward Task": "제한 없는 DGC 보상 태스크",
   "Rewards History": "보상 이력",
   "Rewards Details": "보상 세부사항",
