--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -626,7 +626,7 @@
   "Create Wallet": "Criar a carteira",
   "Open Wallet": "Abrir a carteira",
   "Set as default": "Definir como padrão",
-  "Click to select more models": "Clique para selecionar mais modelos",
+  "Click to switch models": "Clique para trocar de modelo",
   "Unlimited DGC Reward Task": "Tarefa de recompensa DGC ilimitada",
   "Rewards History": "História de recompensas",
   "Rewards Details": "Detalhes das recompensas",
