--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -625,7 +625,7 @@
   "Create Wallet": "Создать кошелек",
   "Open Wallet": "Открыть кошелек",
   "Set as default": "Установить по умолчанию",
-  "Click to select more models": "Нажмите, чтобы выбрать больше моделей",
+  "Click to switch models": "Нажмите, чтобы сменить модель",
   "Unlimited DGC Reward Task": "Задача на получение неограниченного вознаграждения DGC",
   "Rewards History": "История наград",
   "Rewards Details": "Детали наград",
