--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -625,7 +625,7 @@
   "Create Wallet": "สร้างกระเป๋าเงิน",
   "Open Wallet": "เปิดกระเป๋าเงิน",
   "Set as default": "ตั้งเป็นค่าเริ่มต้น",
-  "Click to select more models": "Нажмите, чтобы выбрать больше моделей",
+  "Click to switch models": "คลิกเพื่อเปลี่ยนโมเดล",
   "Unlimited DGC Reward Task": "งานรางวัล DGC ที่ไม่มี จำกัด",
   "Rewards History": "ประวัติการรางวัล",
   "Rewards Details": "รายละเอียดการรางวัล",
