--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -626,7 +626,7 @@
   "Create Wallet": "Cüzdan Oluştur",
   "Open Wallet": "Cüzdanı Aç",
   "Set as default": "Varsayılan Olarak Ayarla",
-  "Click to select more models": "Daha fazla model seçmek için tıklayın",
+  "Click to switch models": "Model değiştirmek için tıklayın",
   "Unlimited DGC Reward Task": "Sınırsız DGC Ödül Görev",
   "Rewards History": "Ödüller Tarihi",
   "Rewards Details": "Ödüller Detayları",
