--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -626,7 +626,7 @@
   "Create Wallet": "Tạo ví",
   "Open Wallet": "Mở ví",
   "Set as default": "Đặt làm mặc định",
-  "Click to select more models": "Nhấn để chọn thêm các mô hình",
+  "Click to switch models": "Nhấn để thay đổi mô hình",
   "Unlimited DGC Reward Task": "Công việc thưởng DGC không giới hạn",
   "Rewards History": "Lịch sử thưởng",
   "Rewards Details": "Chi tiết thưởng",
