--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -628,7 +628,7 @@
   "Create Wallet": "ウォレットを作成する",
   "Open Wallet": "ウォレットを開く",
   "Set as default": "デフォルトに設定",
-  "Click to select more models": "もっと多くのモデルを選択するためにクリックしてください",
+  "Click to switch models": "モデルを切り替える",
   "Unlimited DGC Reward Task": "無制限 DGC 報酬タスク",
   "Rewards History": "報酬履歴",
   "Rewards Details": "報酬詳細",
