--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -486,7 +486,7 @@
   "September": "九月",
   "Server connection verified": "服务器连接已验证",
   "Set as default": "设置为默认",
-  "Click to select more models": "点击选择更多模型",
+  "Click to switch models": "点击切换模型",
   "Set Default Model": "设置默认模型",
   "Set embedding model (e.g. {{model}})": "设置嵌入模型（例如 {{model}}）",
   "Set Image Size": "设置图像大小",
