update track bug

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -600,7 +600,7 @@
   "Upgrade Plan": "Aktualisierungsplan",
   "Upgrade": "Aktualisieren",
   "Upgrade ": "Aktualisieren ",
-  "Upgrade to Vip": "Auf Vip aktualisieren",
+  "Upgrade to VIP": "Auf VIP aktualisieren",
   "Upgrade to Vip failed!": "Aktualisierung auf Vip fehlgeschlagen!",
   "Upgrading": "Aktualisierung läuft",
   "Failed to obtain authorization information.": "Die Erfassung der Autorisierungsinformationen ist fehlgeschlagen.",
@@ -622,7 +622,6 @@
   "Complete KYC": "KYC abschließen",
   "Connect Wallet": "Wallet verbinden",
   "Wallet": "Geldbörse",
-  "Claim Rewards": "Belohnungen abholen",
   "Create Wallet": "Wallet erstellen",
   "Open Wallet": "Wallet öffnen",
   "Set as default": "Als Standard setzen",
@@ -640,6 +639,7 @@
   "Account": "Konto",
   "Statistics": "Statistik",
   "WebUI Settings": "WebUI-Einstellungen",
+  "User interface settings": "Benutzeroberflächeneinstellungen",
   "Theme": "Thema",
   "System": "System",
   "Dark": "Dunkel",
@@ -882,16 +882,16 @@
   "Optimize the code in the file": "Optimieren Sie den Code in der Datei",
   "In web page parsing...": "Beim Parsen von Webseiten...",
   "Deep Research": "Tiefgehende Forschung",
-  "Basic Vip": "Grund-VIP",
-  "Standard Vip": "Standard-VIP",
-  "Pro Vip": "Pro-VIP",
+  "Basic VIP": "Grund-VIP",
+  "Standard VIP": "Standard-VIP",
+  "Pro VIP": "Pro-VIP",
   "Month": "Monat",
   "Year": "Jahr",
   "Instant Savings": "Sofortige Einsparungen",
   "Current Status": "Aktueller Status",
-  "Foundation Model": "Basismodell",
-  "Advanced Model": "Fortgeschrittenes Modell",
-  "Top-Level Model": "Spitzenmodell",
+  "Foundation Models": "Grundmodelle",
+  "Advanced Models": "Fortgeschrittene Modelle",
+  "Top-Level Models": "Top-Level-Modelle",
   "Accessible Foundation Model": "Zugängliches Basismodell",
   "Accessible Advanced Model": "Zugängliches Fortgeschrittenes Modell",
   "Accessible Top-Level Model": "Zugängliches Spitzenmodell",
