--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -600,7 +600,7 @@
   "Upgrade Plan": "",
   "Upgrade": "",
   "Upgrade ": "",
-  "Upgrade to Vip": "",
+  "Upgrade to VIP": "",
   "Upgrade to Vip failed!": "",
   "Upgrading": "",
   "Failed to obtain authorization information.": "",
@@ -622,7 +622,6 @@
   "Complete KYC": "",
   "Connect Wallet": "",
   "Wallet": "",
-  "Claim Rewards": "",
   "Create Wallet": "",
   "Open Wallet": "",
   "Set as default": "",
@@ -640,6 +639,7 @@
   "Account": "",
   "Statistics": "",
   "WebUI Settings": "",
+  "User interface settings": "",
   "Theme": "",
   "System": "",
   "Dark": "",
@@ -882,16 +882,16 @@
   "Optimize the code in the file": "",
   "In web page parsing...": "",
   "Deep Research": "",
-  "Basic Vip": "",
-  "Standard Vip": "",
-  "Pro Vip": "",
+  "Basic VIP": "",
+  "Standard VIP": "",
+  "Pro VIP": "",
   "Month": "",
   "Year": "",
   "Instant Savings": "",
   "Current Status": "",
-  "Foundation Model": "",
-  "Advanced Model": "",
-  "Top-Level Model": "",
+  "Foundation Models": "",
+  "Advanced Models": "",
+  "Top-Level Models": "",
   "Accessible Foundation Model": "",
   "Accessible Advanced Model": "",
   "Accessible Top-Level Model": "",
