--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -599,7 +599,7 @@
   "Upgrade Plan": "Plan de mise à niveau",
   "Upgrade": "Mettre à niveau",
   "Upgrade ": "Mettre à niveau ",
-  "Upgrade to Vip": "Mettre à niveau vers Vip",
+  "Upgrade to VIP": "Mettre à niveau vers VIP",
   "Upgrade to Vip failed!": "La mise à niveau vers Vip a échoué!",
   "Upgrading": "Mise à niveau en cours",
   "Failed to obtain authorization information.": "Impossible d'obtenir les informations d'autorisation.",
@@ -621,7 +621,6 @@
   "Complete KYC": "Terminer le KYC",
   "Connect Wallet": "Connecter le portefeuille",
   "Wallet": "Portefeuille",
-  "Claim Rewards": "Réclamer les récompenses",
   "Create Wallet": "Créer le portefeuille",
   "Open Wallet": "Ouvrir le portefeuille",
   "Set as default": "Définir par défaut",
@@ -639,6 +638,7 @@
   "Account": "Compte",
   "Statistics": "Statistiques",
   "WebUI Settings": "Paramètres de l'interface web",
+  "User interface settings": "Paramètres de l'interface utilisateur",
   "Theme": "Thème",
   "System": "Système",
   "Dark": "Sombre",
@@ -881,16 +881,16 @@
   "Optimize the code in the file": "Optimisez le code dans le fichier",
   "In web page parsing...": "Lors du parsing de pages web...",
   "Deep Research": "Recherche approfondie",
-  "Basic Vip": "Vip de base",
-  "Standard Vip": "Vip standard",
-  "Pro Vip": "Vip Pro",
+  "Basic VIP": "VIP de base",
+  "Standard VIP": "VIP standard",
+  "Pro VIP": "VIP Pro",
   "Month": "Mois",
   "Year": "Année",
   "Instant Savings": "Économies Instantanées",
   "Current Status": "État Actuel",
-  "Foundation Model": "Modèle de Base",
-  "Advanced Model": "Modèle Avancé",
-  "Top-Level Model": "Modèle de Niveau Supérieur",
+  "Foundation Models": "Modèles de Base",
+  "Advanced Models": "Modèles Avancés",
+  "Top-Level Models": "Modèles Haut de Gamme",
   "Accessible Foundation Model": "Modèle de Base Accessible",
   "Accessible Advanced Model": "Modèle Avancé Accessible",
   "Accessible Top-Level Model": "Modèle de Niveau Supérieur Accessible",
