--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -431,8 +431,8 @@
   "reward amount": "報酬額",
   "reward date": "報酬日付",
   "reward type": "報酬タイプ",
-  "Rewards": "報酬（複数）",
-  "rewards amount": "報酬額（複数）",
+  "Rewards": "報酬",
+  "rewards amount": "報酬額",
   "Role": "役割",
   "RTL": "右から左",
   "Save": "保存する",
@@ -602,7 +602,7 @@
   "Upgrade Plan": "アップグレードプラン",
   "Upgrade": "アップグレード",
   "Upgrade ": "アップグレード ",
-  "Upgrade to Vip": "Vip にアップグレード",
+  "Upgrade to VIP": "VIP にアップグレード",
   "Upgrade to Vip failed!": "Vip にアップグレードに失敗しました！",
   "Upgrading": "アップグレード中",
   "Failed to obtain authorization information.": "認証情報の取得に失敗しました。",
@@ -624,7 +624,6 @@
   "Complete KYC": "KYC を完了する",
   "Connect Wallet": "ウォレットを接続する",
   "Wallet": "ウォレット",
-  "Claim Rewards": "報酬を受け取る",
   "Create Wallet": "ウォレットを作成する",
   "Open Wallet": "ウォレットを開く",
   "Set as default": "デフォルトに設定",
@@ -642,6 +641,7 @@
   "Account": "アカウント",
   "Statistics": "とうけい",
   "WebUI Settings": "WebUI 設定",
+  "User interface settings": "ユーザーインターフェース設定",
   "Theme": "テーマ",
   "System": "システム",
   "Dark": "ダーク",
@@ -882,20 +882,20 @@
   "Optimize the code in the file": "ファイル内のコードを最適化してください",
   "In web page parsing...": "ウェブページの解析において...",
   "Deep Research": "Pしょうさいなちょうさ",
-  "Basic Vip": "ベーシック VIP",
-  "Standard Vip": "スタンダード VIP",
-  "Pro Vip": "プロ VIP",
+  "Basic VIP": "ベーシック VIP",
+  "Standard VIP": "スタンダード VIP",
+  "Pro VIP": "プロ VIP",
   "Month": "月",
   "Year": "年",
   "Instant Savings": "即時節約",
   "Current Status": "現在の状態",
-  "Foundation Model": "ファウンデーションモデル",
-  "Advanced Model": "アドバンスドモデル",
-  "Top-Level Model": "トップレベルモデル",
+  "Foundation Models": "基盤モデル",
+  "Advanced Models": "高度なモデル",
+  "Top-Level Models": "トップレベルモデル",
   "Accessible Foundation Model": "アクセシブルファウンデーションモデル",
   "Accessible Advanced Model": "アクセシブル高度モデル",
   "Accessible Top-Level Model": "アクセシブルトップレベルモデル",
-  "For users who have not created a wallet, the foundation model: {{num}} times/day": "ウォレットを作成していないユーザーの場合、ファウンデーションモデル：{{ num }} 回 / 日",
+  "For users who have not created a wallet, the foundation model: {{ num }} times/day": "ウォレットを作成していないユーザーの場合、ファウンデーションモデル：{{ num }} 回 / 日",
   "For users who have created a wallet, the foundation model: {{ num }} times/day": "ウォレットを作成したユーザーの場合、ファウンデーションモデル：{{ num }} 回 / 日",
   "For users who have completed KYC, the foundation model: {{ num }} times/day": "KYC を完了したユーザーの場合、ファウンデーションモデル：{{ num }} 回 / 日",
   "Basic Model: {{num}} Times/Month": "基本モデル: {{ num }} 回 / 月",
