--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -600,7 +600,7 @@
   "Upgrade Plan": "Plano de atualização",
   "Upgrade": "Atualizar",
   "Upgrade ": "Atualizar ",
-  "Upgrade to Vip": "Atualizar para Vip",
+  "Upgrade to VIP": "Atualizar para VIP",
   "Upgrade to Vip failed!": "A atualização para Vip falhou!",
   "Upgrading": "Atualizando",
   "Failed to obtain authorization information.": "Falha ao obter informações de autorização.",
@@ -622,7 +622,6 @@
   "Complete KYC": "Completar o KYC",
   "Connect Wallet": "Conectar a carteira",
   "Wallet": "Carteira",
-  "Claim Rewards": "Resgatar Recompensas",
   "Create Wallet": "Criar a carteira",
   "Open Wallet": "Abrir a carteira",
   "Set as default": "Definir como padrão",
@@ -640,6 +639,7 @@
   "Account": "Conta",
   "Statistics": "Estatísticas",
   "WebUI Settings": "Configurações da interface web",
+  "User interface settings": "Configurações da interface do usuário",
   "Theme": "Tema",
   "System": "Sistema",
   "Dark": "Escuro",
@@ -882,16 +882,16 @@
   "Optimize the code in the file": "Otimize o código no arquivo",
   "In web page parsing...": "Na análise de páginas da web...",
   "Deep Research": "Pesquisa profunda",
-  "Basic Vip": "Vip Básico",
-  "Standard Vip": "Vip Padrão",
-  "Pro Vip": "Vip Profissional",
+  "Basic VIP": "VIP Básico",
+  "Standard VIP": "VIP Padrão",
+  "Pro VIP": "VIP Profissional",
   "Month": "Mês",
   "Year": "Ano",
   "Instant Savings": "Economias Imediatas",
   "Current Status": "Status Atual",
-  "Foundation Model": "Modelo de Fundação",
-  "Advanced Model": "Modelo Avançado",
-  "Top-Level Model": "Modelo de Nível Top",
+  "Foundation Models": "Modelos Base",
+  "Advanced Models": "Modelos Avançados",
+  "Top-Level Models": "Modelos de Alto Nível",
   "Accessible Foundation Model": "Modelo de Fundação Acessível",
   "Accessible Advanced Model": "Modelo Avançado Acessível",
   "Accessible Top-Level Model": "Modelo de Nível Top Acessível",
