--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -599,7 +599,7 @@
   "Upgrade Plan": "План обновления",
   "Upgrade": "Обновить",
   "Upgrade ": "Обновить ",
-  "Upgrade to Vip": "Повысить статус до VIP",
+  "Upgrade to VIP": "Повысить статус до VIP",
   "Upgrade to Vip failed!": "Повышение статуса до VIP не удалось!",
   "Upgrading": "Обновление в процессе",
   "Failed to obtain authorization information.": "Не удалось получить информацию об авторизации.",
@@ -621,7 +621,6 @@
   "Complete KYC": "Завершить KYC",
   "Connect Wallet": "Подключить кошелька",
   "Wallet": "Кошелёк",
-  "Claim Rewards": "Получить вознаграждение",
   "Create Wallet": "Создать кошелек",
   "Open Wallet": "Открыть кошелек",
   "Set as default": "Установить по умолчанию",
@@ -639,6 +638,7 @@
   "Account": "Аккаунт",
   "Statistics": "Статистика",
   "WebUI Settings": "Настройки веб-интерфейса",
+  "User interface settings": "Настройки пользовательского интерфейса",
   "Theme": "Тема",
   "System": "Система",
   "Dark": "Темный",
@@ -881,16 +881,16 @@
   "Optimize the code in the file": " Оптимизируйте код в файле",
   "In web page parsing...": "При парсинге веб-страниц...",
   "Deep Research": "Глубокое исследование",
-  "Basic Vip": "Базовый ВИП",
-  "Standard Vip": "Стандартный ВИП",
-  "Pro Vip": "Профессиональный ВИП",
+  "Basic VIP": "Базовый ВИП",
+  "Standard VIP": "Стандартный ВИП",
+  "Pro VIP": "Профессиональный ВИП",
   "Month": "Месяц",
   "Year": "Год",
   "Instant Savings": "Мгновенные Экономии",
   "Current Status": "Текущий статус",
-  "Foundation Model": "Доступная фундаментальная",
-  "Advanced Model": "Доступная продвинутая",
-  "Top-Level Model": "Доступная верхнего уровня",
+  "Foundation Models": "Базовые Модели",
+  "Advanced Models": "Продвинутые Модели",
+  "Top-Level Models": "Топ-Уровневые Модели",
   "Accessible Foundation Model": "Доступная фундаментальная модель",
   "Accessible Advanced Model": "Доступная продвинутая модель",
   "Accessible Top-Level Model": "Доступная верхнего уровня модель",
