--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -621,7 +621,6 @@
   "Complete KYC": "KYC เสร็จสมบูรณ์",
   "Connect Wallet": "เชื่อมต่อกระเป๋าเงิน",
   "Wallet": "กระเป๋าเงิน",
-  "Claim Rewards": "รับรางวัล",
   "Create Wallet": "สร้างกระเป๋าเงิน",
   "Open Wallet": "เปิดกระเป๋าเงิน",
   "Set as default": "ตั้งเป็นค่าเริ่มต้น",
@@ -639,6 +638,7 @@
   "Account": "บัญชี",
   "Statistics": "สถิติ",
   "WebUI Settings": "การตั้งค่า WebUI",
+  "User interface settings": "การตั้งค่าอินเทอร์เฟซผู้ใช้",
   "Theme": "ธีม",
   "System": "ระบบ",
   "Dark": "มืด",
@@ -881,22 +881,22 @@
   "Optimize the code in the file": " tối ưuรหัสในไฟล์",
   "In web page parsing...": "ในการวิเคราะห์หน้าเว็บ...",
   "Deep Research": "การวิจัยที่ลึกซึ้ง",
-  "Basic Vip": "วิพเบสิค",
-  "Standard Vip": "วิพมาตรฐาน",
-  "Pro Vip": "วิพโปรเฟชั่นাল",
+  "Basic VIP": "วิพเบสิค",
+  "Standard VIP": "วิพมาตรฐาน",
+  "Pro VIP": "วิพโปรเฟชั่นাল",
   "Month": "เดือน",
   "Year": "ปี",
   "Instant Savings": "การประหยัดทันที",
   "Current Status": "สถานะปัจจุบัน",
-  "Foundation Model": "โมเดลพื้นฐาน",  
-  "Advanced Model": "โมเดลขั้นสูง",  
-  "Top-Level Model": "โมเดลระดับสูงสุด",
+  "Foundation Models": "โมเดลพื้นฐาน",
+  "Advanced Models": "โมเดลขั้นสูง",
+  "Top-Level Models": "โมเดลระดับสูงสุด",
   "Accessible Foundation Model": "รุ่นแบบพื้นฐานที่เข้าถึงได้",
   "Accessible Advanced Model": "รุ่นแบบที่มีอัตราการขั้นสูงและเข้าถึงได้",
   "Accessible Top-Level Model": "รุ่นแบบระดับสูงสุดที่เข้าถึงได้",
-  "For users who have not created a wallet, the foundation model: {{num}} times/day": "สำหรับผู้ใช้ที่ยังไม่ได้สร้างกระเป๋า电子錢包 รุ่นแบบพื้นฐาน: {{ num }} ครั้ง/วัน",
-  "For users who have created a wallet, the foundation model: {{ num }} times/day": "สำหรับผู้ใช้ที่ได้สร้างกระเป๋า electronic 錢包 รุ่นแบบพื้นฐาน: {{ num }} ครั้ง/วัน",
-  "For users who have completed KYC, the foundation model: {{ num }} times/day": "สำหรับผู้ใช้ที่已經ทำ完 KYC, รุ่นแบบพื้นฐาน: {{ num }} ครั้ง/วัน",
+  "For users who have not created a wallet, the foundation model: {{ num }} times/day": "สำหรับผู้ใช้ที่ยังไม่ได้สร้างกระเป๋าเงิน โมเดลพื้นฐาน: {{ num }} ครั้ง/วัน",
+  "For users who have created a wallet, the foundation model: {{ num }} times/day": "สำหรับผู้ใช้ที่สร้างกระเป๋าเงินแล้ว โมเดลพื้นฐาน: {{ num }} ครั้ง/วัน",
+  "For users who have completed KYC, the foundation model: {{ num }} times/day": "สำหรับผู้ใช้ที่ยืนยันตัวตน (KYC) เสร็จสิ้น โมเดลพื้นฐาน: {{ num }} ครั้ง/วัน",
   "Basic Model: {{ num }} Times/Month": "แบบเบื้องต้น: {{ num }} ครั้ง/เดือน",
   "Premium Model: {{ num }} Times/Month": "แบบพิเศษ: {{ num }} ครั้ง/เดือน",
   "Top-tier Model: {{ num }} Times/Month": "แบบท็อปทियर: {{ num }} ครั้ง/เดือน",
