--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -600,7 +600,7 @@
   "Upgrade Plan": "Yükseltme Planı",
   "Upgrade": "Yükselt",
   "Upgrade ": "Yükselt ",
-  "Upgrade to Vip": "Vip'a Yükselt",
+  "Upgrade to VIP": "VIP'a Yükselt",
   "Upgrade to Vip failed!": "Vip'a Yükseltme Başarısız!",
   "Upgrading": "Yükseltiliyor",
   "Failed to obtain authorization information.": "Yetkilendirme bilgilerini alamadık.",
@@ -622,7 +622,6 @@
   "Complete KYC": "Kimlik Doğrulamasını Tamamla",
   "Connect Wallet": "Cüzdanı Bağla",
   "Wallet": "Cüzdan",
-  "Claim Rewards": "Ödülleri Al",
   "Create Wallet": "Cüzdan Oluştur",
   "Open Wallet": "Cüzdanı Aç",
   "Set as default": "Varsayılan Olarak Ayarla",
@@ -640,6 +639,7 @@
   "Account": "Hesap",
   "Statistics": "İstatistik",
   "WebUI Settings": "WebUI Ayarları",
+  "User interface settings": "Kullanıcı arayüzü ayarları",
   "Theme": "Tema",
   "System": "Sistem",
   "Dark": "Karanlık",
@@ -882,16 +882,16 @@
   "Optimize the code in the file": "Dosyadaki kodu optimize edin",
   "In web page parsing...": "Web sayfası ayrıştırması sırasında...",
   "Deep Research": "Derin Araştırma",
-  "Basic Vip": "Temel VIP",
-  "Standard Vip": "Standart VIP",
-  "Pro Vip": "Pro VIP",
+  "Basic VIP": "Temel VIP",
+  "Standard VIP": "Standart VIP",
+  "Pro VIP": "Pro VIP",
   "Month": "Ay",
   "Year": "Yıl",
   "Instant Savings": "Anlık Tasarruflar",
   "Current Status": "Geçerli Durum",
-  "Foundation Model": "Temel Model",
-  "Advanced Model": "Gelişmiş Model",
-  "Top-Level Model": "En Üst Seviye Model",
+  "Foundation Models": "Temel Modeller",
+  "Advanced Models": "Gelişmiş Modeller",
+  "Top-Level Models": "Üst Düzey Modeller",
   "Accessible Foundation Model": "Erişilebilir Temel Model",
   "Accessible Advanced Model": "Erişilebilir Gelişmiş Model",
   "Accessible Top-Level Model": "Erişilebilir En Üst Seviye Model",
