--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -430,7 +430,7 @@
   "reward amount": "Số lượng thưởng",
   "reward date": "Ngày thưởng",
   "reward type": "Loại thưởng",
-  "Rewards": "Thưởng( các thưởng)",
+  "Rewards": "Thưởng",
   "rewards amount": "Số lượng thưởng( các số lượng thưởng)",
   "Role": "Vai trò",
   "RTL": "Từ phải sang trái",
@@ -600,7 +600,7 @@
   "Upgrade Plan": "Nâng cấp kế hoạch",
   "Upgrade": "Nâng cấp",
   "Upgrade ": "Nâng cấp ",
-  "Upgrade to Vip": "Nâng cấp lên Vip",
+  "Upgrade to VIP": "Nâng cấp lên VIP",
   "Upgrade to Vip failed!": "Nâng cấp lên Vip thất bại!",
   "Upgrading": "Đang nâng cấp",
   "Failed to obtain authorization information.": "Không thể lấy thông tin ủy quyền.",
@@ -622,7 +622,6 @@
   "Complete KYC": "Hoàn thành KYC",
   "Connect Wallet": "Kết nối ví",
   "Wallet": "Ví",
-  "Claim Rewards": "Nhận Phần Thưởng",
   "Create Wallet": "Tạo ví",
   "Open Wallet": "Mở ví",
   "Set as default": "Đặt làm mặc định",
@@ -640,6 +639,7 @@
   "Account": "Tài khoản",
   "Statistics": "Thống kê",
   "WebUI Settings": "Cài đặt WebUI",
+  "User interface settings": "Cài đặt giao diện người dùng",
   "Theme": "Giao diện",
   "System": "Hệ thống",
   "Dark": "Tối",
@@ -871,16 +871,16 @@
   "Optimize the code in the file": "Tối ưu mã trong tệp",
   "In web page parsing...": "Trong quá trình phân tích trang web...",
   "Deep Research": "Nghiên cứu sâu sắc",
-  "Basic Vip": "VIP Cơ Bản",
-  "Standard Vip": "VIP Tiêu Ch chuẩn",
-  "Pro Vip": "VIP Chuyên Nghiệp",
+  "Basic VIP": "VIP Cơ Bản",
+  "Standard VIP": "VIP Tiêu Ch chuẩn",
+  "Pro VIP": "VIP Chuyên Nghiệp",
   "Month": "Tháng",
   "Year": "Năm",
   "Instant Savings": "Tiết Kiệm Ngay Lập Tức",
   "Current Status": "Trạng Thái Hiện Tại",
-  "Foundation Model": "Mô hình nền tảng",
-  "Advanced Model": "Mô hình nâng cao", 
-  "Top-Level Model": "Mô hình đỉnh cao",
+  "Foundation Models": "Mô Hình Nền Tảng",
+  "Advanced Models": "Mô Hình Nâng Cao",
+  "Top-Level Models": "Mô Hình Cấp Cao",
   "Accessible Foundation Model": "Mô hình Cơ sở Có Thể Truy Cập",
   "Accessible Advanced Model": "Mô hình Cao Cấp Có Thể Truy Cập",
   "Accessible Top-Level Model": "Mô hình Cấp Top Có Thể Truy Cập",
