--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -122,7 +122,6 @@
   "Upgrading pro failed!": "专业版升级失败!",
   "Connect Wallet": "连接钱包",
   "Wallet": "钱包",
-  "Claim Rewards": "领取奖励",
   "Connections": "连接；联系；关联",
   "Content": "内容",
   "Context Length": "上下文长度",
@@ -454,7 +453,7 @@
   "reward amount": "奖励金额",
   "reward date": "奖励日期",
   "reward type": "奖励类型",
-  "Rewards": "奖励（复数）",
+  "Rewards": "奖励",
   "rewards amount": "奖励金额（复数形式，可能强调多个奖励的金额情况）",
   "Role": "角色",
   "RTL": "从右到左",
@@ -542,7 +541,7 @@
   "For VlP users, the daily limit is 500 times.": "对于 VIP 用户，每日限制为 500 次。",
   "For o1 and other models, the daily limit is 1000 times.": "对 o1 以及其他模型的每日1000次使用。",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "你邀请的用户必须完成钱包创建和了解你的客户（KYC）验证流程，然后你才能获得奖励",
-  "Theme": "主题；主题风格",
+  "Theme": "主题风格",
   "This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "这确保了您宝贵的对话被安全地保存到后端数据库。谢谢！",
   "This is an exclusive service for pro users. \n Please upgrade your pro permissions first!": "这是专业用户的专属服务。\n 请先升级您的专业权限！",
   "This setting does not sync across browsers or devices.": "此设置不会在浏览器或设备之间同步。",
@@ -581,7 +580,7 @@
   "Update password": "更新密码",
   "Upgrade": "升级",
   "Upgrade Plan": "升级计划",
-  "Upgrade to Vip": "升级到 Vip",
+  "Upgrade to VIP": "升级到 VIP",
   "Upgrade to Vip failed!": "升级到 Vip 失败！",
   "Upgrading": "正在升级",
   "Failed to obtain authorization information.": "获取授权信息失败。",
@@ -620,6 +619,7 @@
   "Webhook URL": "网络钩子网址（在网络开发中，用于实现不同应用之间的实时通信等）",
   "WebUI Add-ons": "网页用户界面（WebUI）插件",
   "WebUI Settings": "网页用户界面（WebUI）设置",
+  "User interface settings": "用户界面设置",
   "WebUI will make requests to": "网页用户界面（WebUI）将向…… 发出请求",
   "What’s New in": "…… 中的新内容",
   "When history is turned off, new chats on this browser won't appear in your history on any of your devices.": "当历史记录功能关闭时，此浏览器上的新聊天记录不会出现在您任何设备的历史记录中。",
@@ -632,7 +632,7 @@
   "You": "您",
   "You can copy the private key below:": "您可以复制下面的私钥：",
   "You can copy the website below:": "您可以复制下面的网址:",
-  "Copy the link and open it in a browser": "复制连接在浏览器中打开",
+  "Copy the link and open it in a browser": "复制链接在浏览器中打开",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "您每天最多可以邀请 10 个朋友，每天的最高奖励为 10,000 个 DGC。",
   "You have no archived conversations.": "您没有已存档的对话记录。",
   "You have shared this chat": "您已经分享了此聊天记录",
@@ -881,22 +881,22 @@
   "Optimize the code in the file": "优化文件中的代码",
   "In web page parsing...": "网页分析中...",
   "Deep Research": "深度搜索",
-  "Basic Vip": "基础VIP",
-  "Standard Vip": "标准VIP",
-  "Pro Vip": "高级VIP",
+  "Basic VIP": "基础VIP",
+  "Standard VIP": "标准VIP",
+  "Pro VIP": "高级VIP",
   "Month": "月",
   "Year": "年",
   "Instant Savings": "立省",
   "Current Status": "当前状态",
-  "Foundation Model": "基础模型",
-  "Advanced Model": "高级模型",
-  "Top-Level Model": "顶级模型",
+  "Foundation Models": "基础模型",
+  "Advanced Models": "高级模型",
+  "Top-Level Models": "顶级模型",
   "Accessible Foundation Model": "可访问基础模型",
   "Accessible Advanced Model": "可访问高级模型",
   "Accessible Top-Level Model": "可访问顶级模型",
   "For users who have not created a wallet, the foundation model: {{ num }} times/day": "未创建钱包的用户，基础模型：{{ num }}次/天",
   "For users who have created a wallet, the foundation model: {{ num }} times/day": "已经创建钱包的用户，基础模型：{{ num }}次/天",
-  "For users who have completed KYC, the foundation model: {{ num }} times/day": "已完成KYC的用户,基础模型：{{ num }}次/天",
+  "For users who have completed KYC, the foundation model: {{ num }} times/day": "已完成KYC的用户，基础模型：{{ num }}次/天",
   "Basic Model: {{ num }} Times/Month": "基础模型：{{ num }}次/月",
   "Premium Model: {{ num }} Times/Month": "高级模型：{{ num }}次/月",
   "Top-tier Model: {{ num }} Times/Month": "顶级模型：{{ num }}次/月",
