update tools function

--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -837,14 +837,20 @@
   "What does the symbol in the picture represent?": "",
   "Help me solve problems": "",
   "Last for {{ time }} seconds": "",
+  "Tool": "",
   "Search the Web": "",
   "Search the Twitter": "",
   "Search the YouTube": "",
+  "Translate": "",
+  "Webpage Reading": "",
   "search": "",
   "Web Search": "",
   "YouTube Search": "",
   "Twitter Search": "",
   "Web Searching ...": "",
+  "Paste or enter a link...": "",
+  "Enter text to translate...": "",
+  "Auto-detect": "",
   "Deep thinking,mathematical and writing abilities ≈ o3": "",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "",
   "A single IP address can be used for a maximum of two KYC verifications": "",
