--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -837,14 +837,20 @@
   "What does the symbol in the picture represent?": "O que o símbolo na imagem representa?",
   "Help me solve problems": "Ajude - me a resolver problemas",
   "Last for {{ time }} seconds": "Dura {{ time }} segundos",
+  "Tool": "도구",
   "Search the web": "Pesquisar na web",
   "Search the Twitter": "Pesquisar na Twitter",
   "Search the YouTube": "Pesquisar na YouTube",
+  "Translate": "번역",
+  "Webpage Reading": "웹페이지 읽기",
   "search": "pesquisar",
   "Web Search": "Pesquisa na web",
   "YouTube Search": "Pesquisa na YouTube",
   "Twitter Search": "Pesquisa na Twitter",
   "Web Searching ...": "Pesquisando na web ...",
+  "Paste or enter a link...": "링크 붙여넣기 또는 입력...",
+  "Enter text to translate...": "번역할 텍스트 입력...",
+  "Auto-detect": "자동 감지",
   "Deep thinking,mathematical and writing abilities ≈ o3": "Pensamento profundo, habilidades matemáticas e de escrita ≈ o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "A verificação KYC é limitada a uma vez a cada 10 minutos. Por favor tente novamente mais tarde.",
   "A single IP address can be used for a maximum of two KYC verifications": "Um único endereço IP pode ser usado no máximo duas vezes para verificações KYC.",
