--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -836,14 +836,20 @@
   "What does the symbol in the picture represent?":"Что представляет собой символ на изображении?",
   "Help me solve problems": "Помогите мне решить проблемы",
   "Last for {{ time }} seconds": "Длится {{ time }} секунд",
+  "Tool": "Инструмент",
   "Search the web": "Поиск в интернете",
   "Search the Twitter": "Поиск на Twitter",
   "Search the YouTube": "Поиск на YouTube",
+  "Translate": "Переводить",
+  "Webpage Reading": "Чтение веб-страниц",
   "search": "поиск",
   "Web Search": "Поиск в интернете",
   "YouTube Search": "поиск на YouTube",
   "Twitter Search": "поиск на Twitter",
   "Web Searching ...": "Выполняется поиск в интернете ...",
+  "Paste or enter a link...": "Вставьте или введите ссылку...",
+  "Enter text to translate...": "Введите текст для перевода...",
+  "Auto-detect": "Автоопределение",
   "Deep thinking,mathematical and writing abilities ≈ o3": "Глубокое мышление, математические и писательские способности ≈ o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "Верификация KYC ограничена одной процедурой каждые 10 минут, Пожалуйста, попробуйте еще раз позже.",
   "A single IP address can be used for a maximum of two KYC verifications": "Одна IP - адрес может быть использована максимум дважды для верификации KYC.",
