--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -837,14 +837,20 @@
   "What does the symbol in the picture represent?": "Resimdeki sembol neyi temsil eder?",
   "Help me solve problems": "Bana problemleri çözmemde yardım et",
   "Last for {{ time }} seconds": "{{ time }} saniye sürer",
+  "Tool": "Araç",
   "Search the web": "Web'de Ara",
   "Search the Twitter": "Twitter'de Ara",
   "Search the YouTube": "YouTube'de Ara",
+  "Translate": "Çevirmek",
+  "Webpage Reading": "Web sayfası okuma",
   "search": "arama",
   "Web Search": "Web araması",
   "YouTube Search": "YouTube araması",
   "Twitter Search": "Twitter araması",
   "Web Searching ...": "Web'de aranıyor ...",
+  "Paste or enter a link...": "Bağlantıyı yapıştırın veya girin...",
+  "Enter text to translate...": "Çevrilecek metni girin...",
+  "Auto-detect": "Otomatik algılama",
   "Deep thinking,mathematical and writing abilities ≈ o3": "Derin düşünme, matematiksel ve yazı yazma yetenekleri ≈ o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "KYC doğrulaması her 10 dakikada bir kez yapılabilir, Lütfen daha sonra tekrar deneyin.",
   "A single IP address can be used for a maximum of two KYC verifications": "Tek bir IP adresi en fazla iki kez KYC doğrulaması için kullanılabilir.",
