--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -826,14 +826,20 @@
   "Explain this picture": "Giải thích bức tranh này",
   "Help me solve problems": "Trợ giúp tôi giải quyết các vấn đề",
   "Last for {{ time }} seconds": "Để lại {{ time }} giây",
+  "Tool": "Công cụ",
   "Search the web": "Tìm kiếm trên web",
   "Search the Twitter": "Tìm kiếm trên Twitter",
   "Search the YouTube": "Tìm kiếm trên YouTube",
+  "Translate": "Dịch",
+  "Webpage Reading": "Đọc trang web",
   "search": "tìm kiếm",
   "Web Search": "Tìm kiếm trên web",
   "YouTube Search": "Tìm kiếm trên YouTube",
   "Twitter Search": "Tìm kiếm trên Twitter",
   "Web Searching ...": "Đang tìm kiếm trên web ...",
+  "Paste or enter a link...": "Dán hoặc nhập liên kết...",
+  "Enter text to translate...": "Nhập văn bản cần dịch...",
+  "Auto-detect": "Tự động phát hiện",
   "Deep thinking,mathematical and writing abilities ≈ o3": "Tư duy sâu sắc, khả năng toán học và năng lực viết văn xunge o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "Xác minh KYC chỉ được thực hiện một lần mỗi 10 phút, Vui lòng thử lại sau.",
   "A single IP address can be used for a maximum of two KYC verifications": "Một địa chỉ IP duy nhất có thể được sử dụng tối đa hai lần cho việc xác minh KYC.",
