--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -836,14 +836,20 @@
   "What does the symbol in the picture represent?": "图中的符号代表什么?",
   "Help me solve problems": "帮我解题",
   "Last for {{ time }} seconds": "持续{{ time }}秒",
+  "Tool": "工具",
   "Search the Web": "搜索网页",
   "Search the Twitter": "搜索推特",
   "Search the YouTube": "搜索YouTube",
+  "Translate": "翻译",
+  "Webpage Reading": "网页阅读",
   "search": "搜索",
   "Web Search": "网络搜索",
   "YouTube Search": "YouTube 搜索",
   "Twitter Search": "Twitter 搜索",
   "Web Searching ...": "正在进行网络搜索...",
+  "Paste or enter a link...": "粘贴或输入链接...",
+  "Enter text to translate...": "输入要翻译的文本...",
+  "Auto-detect": "自动检测",
   "Deep thinking,mathematical and writing abilities ≈ o3": "深度思考，在数学、创意写作等任务性能上比肩o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "KYC 认证每 10 分钟只能进行一次。请稍后再试。",
   "A single IP address can be used for a maximum of two KYC verifications": "单个 IP 地址最多可用于两次 KYC 认证。",
