--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -837,6 +837,7 @@
   "What does the symbol in the picture represent?": "Was repräsentiert das Symbol im Bild?",
   "Help me solve problems": "Helfen Sie mir, Probleme zu lösen",
   "Last for {{ time }} seconds": "Dauert {{ time }} Sekunden lang",
+  "Tool": "Werkzeug",
   "Search the Web": "Im Internet suchen",
   "Search the Twitter": "Im Twitter suchen",
   "Search the YouTube": "Im YouTube suchen",
@@ -845,6 +846,9 @@
   "YouTube Search": "YouTube suche",
   "Twitter Search": "Twitter suche",
   "Web Searching ...": "Websuche läuft ...",
+  "Paste or enter a link...": "Link einfügen oder eingeben...",
+  "Enter text to translate...": "Text zum Übersetzen eingeben...",
+  "Auto-detect": "Automatische Erkennung",
   "Deep thinking,mathematical and writing abilities ≈ o3": "Tiefes Denken, mathematische und schreibende Fähigkeiten ≈ o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "Die KYC-Verifizierung ist auf einmal alle 10 Minuten beschränkt. Bitte versuchen Sie es später erneut.",
   "A single IP address can be used for a maximum of two KYC verifications": "Eine einzelne IP-Adresse kann maximal zweimal für die KYC-Verifizierung verwendet werden.",
