--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -837,14 +837,20 @@
   "What does the symbol in the picture represent?": "Apa yang diwakili oleh simbol dalam gambar itu?",
   "Help me solve problems": "Bantu saya menyelesaikan masalah - masalah",
   "Last for {{ time }} seconds": "Berlangsung selama {{ time }} detik",
+  "Tool": "Alat",
   "Search the web": "Cari di web",
   "Search the Twitter": "Cari di Twitter",
   "Search the YouTube": "Cari di YouTube",
+  "Translate": "Menerjemahkan",
+  "Webpage Reading": "Membaca halaman web",
   "search": "cari",
   "Web Search": "Pencarian web",
   "YouTube Search": "Pencarian YouTube",
   "Twitter Search": "Pencarian Twitter",
   "Web Searching ...": "Sedang melakukan pencarian web ...",
+  "Paste or enter a link...": "Tempel atau masukkan tautan...",
+  "Enter text to translate...": "Masukkan teks untuk diterjemahkan...",
+  "Auto-detect": "Deteksi otomatis",
   "Deep thinking,mathematical and writing abilities ≈ o3": "Pemikiran mendalam, kemampuan matematika dan penulisan ≈ o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "Verifikasi KYC dibatasi hanya boleh dilakukan sekali setiap 10 menit. Silakan coba lagi nanti.",
   "A single IP address can be used for a maximum of two KYC verifications": "Sebuah alamat IP tunggal dapat digunakan maksimal untuk dua kali verifikasi KYC.",
