--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -837,14 +837,20 @@
   "What does the symbol in the picture represent?":"絵の中の記号は何を表していますか？",
   "Help me solve problems": "問題を解決するのを手伝ってください",
   "Last for {{ time }} seconds": "{{time}} 秒間続きます",
+  "Tool": "ツール",
   "Search the web": "ウェブで検索する",
   "Search the Twitter": "Twitter を検索する",
   "Search the YouTube": "YouTube を検索する",
+  "Translate": "翻訳",
+  "Webpage Reading": "ウェブページの閲覧",
   "search": "検索",
   "Web Search": "ウェブ検索",
   "YouTube Search": "YouTube 検索",
   "Twitter Search": "Twitter 検索",
   "Web Searching ...": "ウェブ検索中...",
+  "Paste or enter a link...": "リンクを貼り付けるか入力...",
+  "Enter text to translate...": "翻訳するテキストを入力...",
+  "Auto-detect": "自動検出",
   "Deep thinking,mathematical and writing abilities ≈ o3": "深い思考、数学的能力と執筆能力は o3 に匹敵し",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "KYC 認証は 10 分に 1 回までに制限されています，後でもう一度お試しください。",
   "A single IP address can be used for a maximum of two KYC verifications": "単一の IP アドレスは、最大で 2 回の KYC 認証に使用できます。",
